src/test/resources/trialFiles/valid/ifNoElseReturnAndExit.wacc
begin
  int f() is
    int x = 1;
    if x == 1
    then
      return x
    fi;
    exit -1
  end
  int x = call f();
  println x
end
