src/test/resources/trialFiles/invalid/semanticErr/overloadSameParamType.wacc
begin
  # same param types
  int f(bool t) is
    return 1
  end
  bool f(bool f) is
    return false
  end

  skip
end
